# Lyrico

./: .gitignore  .gitmodules  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.gradle.kts  gradle.properties  package.json  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug-report-cn.yml  bug-report-en.yml  feature-request-cn.yml  feature-request-en.yml
.github/workflows/: build-debug.yml  deploy-docs.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
audiotag/: build.gradle.kts
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/en-US/: index.md
docs/en-US/guide/: batch.md  browsing.md  faq.md  getting-started.md  index.md  library.md  plugins.md  single-song.md
docs/en-US/plugins/: composition.md  config-metadata.md  debugging.md  examples.md  host-api.md  index.md  using.md  (+3 more)
docs/guide/: batch.md  browsing.md  faq.md  getting-started.md  index.md  library.md  plugins.md  single-song.md
docs/plugins/: composition.md  config-metadata.md  debugging.md  examples.md  host-api.md  index.md  manifest.md  overview.md  plugin-functions.md  using.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lyrico-app/: build.gradle.kts  proguard-rules.pro
lyrico-audiotag/: .gitignore  build.gradle.kts  consumer-rules.pro
lyrico-audiotag/scripts/: build_taglib.sh
lyrico-audiotag/src/main/cpp/: CMakeLists.txt  JInputStream.cpp  JMetadataBuilder.cpp  JTagMap.cpp  build_taglib.sh  taglib.cpp  taglib_jni.cpp  utils.h
lyrico-audiotag/src/main/cpp/taglib/pkg/x86/lib/cmake/taglib/: taglib-targets.cmake
lyrico-lyrics/: build.gradle.kts
lyrico-plugin-api/: build.gradle.kts
tests/: test_invariant_LyricDecoder.py
(+432 files in other folders)
